force-app/main/default/objects/Relationship_Manager__c/Relationship_Manager__c.object-meta.xml
<CustomObject>
    <label>Relationship Manager</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>