force-app/main/default/objects/Relationship_Manager__c/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <label>RM Contact Number</label>
    <type>Phone</type>
</CustomField>