force-app/main/default/objects/Relationship_Manager__c/fields/did_number_from_user__c.field-meta.xml
<CustomField>
    <fullName>did_number_from_user__c</fullName>
    <formula>User__r.DID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>did number from user</label>
    <type>Text</type>
</CustomField>