force-app/main/default/objects/Relationship_Manager__c/fields/Name_Of_RM__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_RM__c</fullName>
    <formula>User__r.FirstName + &apos; &apos;+  User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Of RM</label>
    <type>Text</type>
</CustomField>