force-app/main/default/objects/Relationship_Manager__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Relationship Managers</relationshipLabel>
    <relationshipName>Relationship_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>