force-app/main/default/objects/Relationship_Manager__c/fields/RM_Email__c.field-meta.xml
<CustomField>
    <fullName>RM_Email__c</fullName>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RM Email</label>
    <type>Text</type>
</CustomField>