force-app/main/default/objects/Relationship_Manager__c/fields/RM_Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>RM_Work_Hours__c</fullName>
    <label>RM Work Hours</label>
    <length>20</length>
    <type>Text</type>
</CustomField>