force-app/main/default/objects/Relationship_Manager__c/fields/TL_Email__c.field-meta.xml
<CustomField>
    <fullName>TL_Email__c</fullName>
    <formula>User__r.Manager.Email</formula>
    <label>TL Email</label>
    <type>Text</type>
</CustomField>