force-app/main/default/objects/Relationship_Manager__c/fields/TL_Name__c.field-meta.xml
<CustomField>
    <fullName>TL_Name__c</fullName>
    <formula>User__r.Manager.FirstName + &apos; &apos; +  User__r.Manager.LastName</formula>
    <label>TL Name</label>
    <type>Text</type>
</CustomField>