force-app/main/default/objects/Relationship_Manager__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Tower__c.ProjectName__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Tower__c</referenceTo>
    <relationshipLabel>Relationship Managers</relationshipLabel>
    <relationshipName>Relationship_Managers</relationshipName>
    <type>Lookup</type>
</CustomField>