force-app/main/default/objects/Relationship_Manager__c/listViews/Mahalaxmi_users.listView-meta.xml
<ListView>
    <fullName>Mahalaxmi_users</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Tower__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>contains</operation>
        <value>Mahalaxmi</value>
    </filters>
    <label>Mahalaxmi users</label>
</ListView>